--- a/serverless.yml
+++ b/serverless.yml
@@ -62,6 +62,13 @@ provider:
 functions:
   hello:
     handler: handler.hello
+
+resources:
+  Resources:
+    PiyalBucketUpload:
+      Type: AWS::S3::Bucket
+      Properties:
+        BucketName: piyal-demo-bucket-789
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
