getPosts added to yml file

--- a/serverless.yml
+++ b/serverless.yml
@@ -23,6 +23,13 @@ functions:
           path: /getUsers
           method: GET
           cors: true
+  getPosts:
+    handler: lambdas/getPosts.handler
+    events:
+      - http:
+          path: /getPosts
+          method: GET
+          cors: true
 
 resources:
   Resources:
