--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "axios": "^0.24.0",
-    "serverless-s3-sync": "^3.1.0"
+    "serverless-s3-sync": "^3.1.0",
+    "serverless-webpack": "^5.11.0",
+    "webpack": "^5.75.0"
   }
 }
