--- a/serverless.yml
+++ b/serverless.yml
@@ -21,17 +21,10 @@ custom:
 
 functions:
   getUsers:
-    handler: lambdas/getData.getUsers
+    handler: lambdas/getData.handler
     events:
       - http:
           path: /getUsers
-          method: GET
-          cors: true
-  getPosts:
-    handler: lambdas/getData.getPosts
-    events:
-      - http:
-          path: /getPosts
           method: GET
           cors: true
 
