--- a/serverless.yml
+++ b/serverless.yml
@@ -15,6 +15,7 @@ package:
   individually: true
 
 custom:
+  tableName: player-demo
   s3Sync:
     - bucketName: piyal-demo-bucket-789
       localDir: UploadData
@@ -34,3 +35,14 @@ resources:
       Type: AWS::S3::Bucket
       Properties:
         BucketName: piyal-demo-bucket-789
+    DemeDynamoDBTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: ${self.custom.tableName}
+        AttributeDefinitions:
+          - AttributeName: ID
+            AttributeType: S
+        KeySchema:
+          - AttributeName: ID
+            KeyType: HASH
+        BillingMode: PAY_PER_REQUEST
