--- a/serverless.yml
+++ b/serverless.yml
@@ -15,7 +15,7 @@ package:
   individually: true
 
 custom:
-  tableName: player-demo
+  tableName: playerDemo
   s3Sync:
     - bucketName: piyal-demo-bucket-789
       localDir: UploadData
@@ -38,7 +38,7 @@ resources:
     DemeDynamoDBTable:
       Type: AWS::DynamoDB::Table
       Properties:
-        TableName: ${self.custom.tableName}
+        TableName: ${self:custom.tableName}
         AttributeDefinitions:
           - AttributeName: ID
             AttributeType: S
